--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 aria2
 joblib>=1.1.0
-numba>=0.59
-numpy
+numba==0.56.4
+numpy==1.23.5
 scipy
 librosa==0.9.1
 llvmlite==0.39.0
-fairseq
-faiss-cpu
+fairseq==0.12.2
+faiss-cpu==1.7.3
 gradio==3.34.0
 Cython
 pydub>=0.25.1
